// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Linkd > Linkd default renders correctly 1`] = `
<DocumentFragment>
  <a
    class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
    href="/"
  >
    <svg
      aria-hidden="true"
      aria-label="chevron-rechts-icoon"
      class="_Icon_c3ab45 _Icon__left_c3ab45"
      fill="#000"
      focusable="false"
      height="14px"
      viewBox="0 0 32 32"
      width="14px"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    >
      <polygon
        points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
      />
    </svg>
    <svg
      aria-label="waarschuwing-icoon"
      focusable="false"
      height="36"
      viewBox="0 0 36 36"
      width="36"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M33.63,30.9H2.37L18,3Zm-24.44-4H26.81L18,11.19Z"
      />
      <rect
        height="4.95"
        width="2"
        x="17"
        y="16.99"
      />
      <rect
        height="1.95"
        width="2"
        x="17"
        y="22.94"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`Linkd > Linkd external renders correctly 1`] = `
<DocumentFragment>
  <a
    class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
    href="/"
    rel="external noopener noreferrer"
  >
    <svg
      aria-hidden="true"
      aria-label="chevron-rechts-icoon"
      class="_Icon_c3ab45 _Icon__left_c3ab45"
      fill="#000"
      focusable="false"
      height="14px"
      viewBox="0 0 32 32"
      width="14px"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    >
      <polygon
        points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
      />
    </svg>
    Link!
  </a>
</DocumentFragment>
`;

exports[`Linkd > Renders 1`] = `
<DocumentFragment>
  <a
    class="_Button_c3ab45 _Button__plain_c3ab45 _Button__lean_c3ab45 _Linkd_c3ab45"
    href="/"
  >
    <svg
      aria-hidden="true"
      aria-label="chevron-rechts-icoon"
      class="_Icon_c3ab45 _Icon__left_c3ab45"
      fill="#000"
      focusable="false"
      height="14px"
      viewBox="0 0 32 32"
      width="14px"
      xmlns="http://www.w3.org/2000/svg"
      xmlns:xlink="http://www.w3.org/1999/xlink"
    >
      <polygon
        points="9.75688579 32 6.85714286 29.0899743 19.9368344 16 6.85714286 2.91002571 9.75688579 0 25.7568858 16"
      />
    </svg>
    Link!
  </a>
</DocumentFragment>
`;
